<resources>
    <string name="app_name">smartParkingCopenhagen</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="email_user">Username</string>
    <string name="password_user">Password</string>
    <string name="zone_parking">Parking zone</string>
    <string name="distance_parking">Distance</string>
    <string name="booking_parking">Guide</string>
    <string name="lista">List</string>
    <string name="crear">Create</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="availability">Availability</string>
    <string name="name">Name</string>
</resources>
