<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundLogReg">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/name_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editBackground"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/lat_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editBackground"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/long_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editBackground"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availability"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/ava_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editBackground"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/crear"/>
</LinearLayout>